discussion/kv_engine/176460/176460_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Separate setMaxDataSize() into components

We'll re-use many of these components in the BucketQuotaChangeTask
in future patches. setMaxDataSize() will remain as-is for the sake
of initial quota setting and unit tests that don't work nicely with
an extra task.

Change-Id: Ie0e229f60ec949df0027094e90996876e318f62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-07-05 10:08:26.000000000
Message: 
Uploaded patch set 13: Patch Set 12 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 11:10:02.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47459/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(837): error C2039: "setBucketQuotaChangeTaskWaitTime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47459/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18672/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27: error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
            configuration.setBucketQuotaChangeTaskWaitTime(std::stoul(val));
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18672/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18672/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39873/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8350/ : FAILURE

Compile error at [2022-07-05T10:40:16.515Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8350/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8449/ : FAILURE

Compile error at [2022-07-05T10:14:16.941Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8449/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20561/ : FAILURE

Compile error at [2022-07-05T10:43:27.908Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20561/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20914/ : FAILURE

Compile error at [2022-07-05T10:54:53.574Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28948/ : FAILURE

Compile error at [2022-07-05T11:09:14.157Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28948/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21571/ : FAILURE

Compile error at [2022-07-05T10:42:15.877Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21571/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19792/ : FAILURE

Compile error at [2022-07-05T10:55:41.218Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19792/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17826/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
